<resources>

    <string name="str_close_app">Close App</string>

    <string name="close_confirm">Are you sure you want to quit?</string>

    <string name="str_yes">Yes</string>

    <string name="str_no">No</string>

    <string name="str_next">Next</string>

    <string name="str_finish">Finish</string>

    <string name="str_txtcontinue">Continue...</string>

    <string name="str_continue">Continue</string>

    <string name="str_txtback">Back again...</string>

      <string name="str_back">Back</string>
    
    <string name="str_prev">Previous</string>

    <string name="app_name">Learn English</string>

    <string name="str_learn">Learn</string>

    <string name="str_review">Review</string>

    <string name="str_progress">Progress</string>

    <string name="str_about">About</string>

    <string name="str_exit">Exit</string>

    <string name="copy_rights">ahmed osama &#8230; 01227670703</string>

    <string name="txt_one_title">About the application :</string>

    <string name="txt_two_title">About the programmer :</string>

    <string name="str_mode">Mode :</string>

    <string name="str_words">Words</string>

    <string name="str_pictures">Pictures</string>

    <string name="str_both">Both</string>

    <string name="str_items">Number of words :</string>

    <string name="str_done">You have learnt all the available words</string>

    <string name="str_done2">Review your vocabulary</string>

    <string name="str_start">Start</string>

    <string name="str_level">Level :</string>

    <string name="str_easy">Easy</string>

    <string name="str_medium">Medium</string>

    <string name="str_hard">Hard</string>

    <string name="notes1">First, Listen to the word.</string>

    <string name="notes2">Then, Try to memorize the word.</string>

    <string name="notes3">Last, Move on &amp; test yourself.</string>

    <string name="str_title_translation"><u>Translation</u> :</string>

    <string name="str_title_example"><u>Example</u> :</string>

    <string name="txt_one">Learn English is a free app for those wo want to have the vcabulary that enables them to speak fluently</string>

    <string name="txt_two">ahmed osama, a programmer in some programming languages like java, C#, C++ .\nFollow me in social networks on :\nahmed_osama500@yahoo.com</string>

    <string name="nLearnTitle">The Learned Words :</string>

    <string name="nRestTitle">The Rest Words :</string>

    <string name="wrongWordsTitle">The Wrong Answers :</string>

    <string name="There_is_no_words_to_review">There is no words to review</string>

    <string name="Go_ahead_and_learn">Go ahead and learn</string>

    <string name="You_have_reviewed_all_the_words_you_learned">You have reviewed all the words you learned"</string>

    <string name="Back_to_main_menu">Back to main menu</string>

    <string name="Main_Menu">Main Menu</string>

    <string name="Write_the_following_meanings">Write the following meanings :</string>

    <string name="Submit">Submit</string>

    <string name="str_open">Open</string>

    <string name="str_close">Close</string>

    <string name="description">Learn the most commonly used english words interactively</string>

    <string name="str_main">Main</string>

</resources>
