<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:text="@string/str_learn"
        android:id="@+id/btnLearn"
        android:layout_width="@dimen/btn_width"
        style="@style/btn_style"
        android:layout_gravity="center_horizontal"
        android:layout_height="43dp" />

    <Button
        android:text="@string/str_review"
        android:id="@+id/btnReview"
        android:layout_marginTop="@dimen/buttons_space"
        android:layout_width="@dimen/btn_width"
        style="@style/btn_style"
        android:layout_gravity="center_horizontal"
        android:layout_height="43dp" />

    <Button
        android:text="@string/str_progress"
        android:id="@+id/btnProgress"
        android:layout_marginTop="@dimen/buttons_space"
        android:layout_width="@dimen/btn_width"
        style="@style/btn_style"
        android:layout_gravity="center_horizontal"
        android:layout_height="43dp" />

    <Button
        android:text="@string/str_about"
        android:id="@+id/btnAbout"
        android:layout_marginTop="@dimen/buttons_space"
        android:layout_width="@dimen/btn_width"
        style="@style/btn_style"
        android:layout_gravity="center_horizontal"
        android:layout_height="43dp" />

    <Button
        android:text="@string/str_exit"
        android:id="@+id/btnExit"
        android:layout_marginTop="@dimen/buttons_space"
        android:layout_width="@dimen/btn_width"
        style="@style/btn_style"
        android:layout_gravity="center_horizontal"
        android:layout_height="43dp" />

</LinearLayout>