<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/color_BG"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:background="@drawable/background_border"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt1"
            android:gravity="center"
               android:text="@string/str_done"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="120dp"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt2"
            android:gravity="center"
            android:text="@string/str_done2"
            android:textSize="25sp"
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt1"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/str_review"
            android:textAllCaps="false"
            style="@style/btn_style"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_below="@id/txt2"
            android:id="@+id/btnReview" />

    </RelativeLayout>


</LinearLayout>