<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayoutMain"
    android:background="@color/color_BG"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/color_BG"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <include layout="@layout/nav_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:background="@drawable/background_border"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt1"
                android:gravity="center"
                android:text="@string/You_have_reviewed_all_the_words_you_learned"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="120dp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt2"
                android:gravity="center"
                android:text="@string/Back_to_main_menu"
                android:textSize="25sp"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txt1"
                android:textStyle="normal|bold" />

            <Button
                android:text="@string/Main_Menu"
                android:textAllCaps="false"
                android:textSize="18sp"
                style="@style/btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="110dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_below="@id/txt2"
                android:id="@+id/btnMainMenu" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/MainNav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:theme="@style/navStyle"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>