<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayoutMain"
    android:background="@color/color_BG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ahmedosama.memorypower.TestActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/nav_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/relativeMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@color/color_BG"
            tools:context="com.ahmedosama.memorypower.TestActivity">

            <TextView
                android:text="@string/Write_the_following_meanings"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtHeader" />

            <ListView
                android:id="@+id/lstQuestions"
                android:background="@drawable/background_border"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/txtHeader"
                android:layout_above="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:text="@string/str_back"
                style="@style/btn_style"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="10dp"
                android:id="@+id/btnBack" />

            <Button
                android:text="@string/Submit"
                android:textAllCaps="false"
                style="@style/btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:id="@+id/btnSubmit" />


        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/MainNav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:theme="@style/navStyle"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>