<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayoutMain"
    android:background="@color/color_BG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ahmedosama.memorypower.ResultActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/nav_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/relativeResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_BG"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.ahmedosama.memorypower.ResultActivity">


            <TextView
                android:id="@+id/txtMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="70%"
                android:textSize="30sp"
                android:background="@drawable/rounded_textview"
                android:textColor="@android:color/holo_green_dark"
                android:gravity="center"
                android:textStyle="normal|bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/txtWrongTitle"
                android:text="@string/wrongWordsTitle"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMark"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <ListView
                android:id="@+id/lstviewWrongAnswers"
                android:background="@drawable/background_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_above="@+id/btnResult"
                android:layout_below="@id/txtWrongTitle"/>


            <Button
                android:id="@+id/btnResult"
                android:text="@string/str_continue"
                style="@style/btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textAllCaps="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

            <TextView
                android:id="@+id/txtResult"
                android:text="@string/str_txtcontinue"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnResult"/>



        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/MainNav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:theme="@style/navStyle"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
