<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayoutMain"
    android:background="@color/color_BG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ahmedosama.memorypower.ProgressActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/color_BG"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/nav_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/activity_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_BG"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.ahmedosama.memorypower.ProgressActivity">


            <TextView
                android:id="@+id/txtProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="70%"
                android:textSize="30sp"
                android:background="@drawable/rounded_textview"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:textStyle="normal|bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:id="@+id/relativeProgress"
                android:layout_below="@id/txtProgress"
                android:layout_marginTop="25dp"
                android:background="@drawable/background_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/nLearnTitle"
                    android:textSize="26sp"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtLearnedTitle" />

                <TextView
                    android:text="n1"
                    android:textSize="26sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/txtLearnedTitle"
                    android:layout_toEndOf="@id/txtLearnedTitle"
                    android:layout_alignBaseline="@id/txtLearnedTitle"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:id="@+id/txtLearnedWords" />

                <TextView
                    android:text="@string/nRestTitle"
                    android:textSize="26sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_below="@id/txtLearnedTitle"
                    android:id="@+id/txtRestTitle" />

                <TextView
                    android:text="n1"
                    android:textSize="26sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/txtLearnedTitle"
                    android:layout_toEndOf="@id/txtLearnedTitle"
                    android:layout_alignBaseline="@id/txtRestTitle"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:id="@+id/txtRestWords" />

                <Button
                    android:text="@string/str_learn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/btn_style"
                    android:layout_marginLeft="55dp"
                    android:layout_marginStart="55dp"
                    android:layout_below="@id/txtRestTitle"
                    android:layout_marginTop="70dp"
                    android:layout_marginBottom="25dp"
                    android:id="@+id/btnLearn" />

                <Button
                    android:text="@string/str_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/btn_style"
                    android:layout_marginRight="55dp"
                    android:layout_marginEnd="55dp"
                    android:layout_alignBaseline="@id/btnLearn"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/btnReview" />

            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/MainNav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:theme="@style/navStyle"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
